- [M] lib/vsnprintf.c				[D] I reread the code, and change 'qualifiers' to 'modifiers',
-						 >  which might be more proper, since all manuals call this way.


Wed Jan 20 10:21:18 CST 2016
- [+] scripts/tags.sh
- [+] arch/x86/boot/install.sh
- [+] scirpts/gcc-version.sh
- [M] Makefile
- [M] arch/x86/Makefile
- [M] arch/x86/boot/Makefile


Thu Jan 21 11:43:12 CST 2016
- [M] arch/x86/boot/tools/build.c		[D] Two output images, bzImage + bzImgae.iso


Fri Jan 22 16:57:04 CST 2016
- [+] arch/x86/boot/copy.S
- [+] arch/x86/boot/video-mode.c		[D] select video mode when booting
- [+] arch/x86/boot/video-bios.c		 >  many thanks to linux kernel developers!
- [+] arch/x86/boot/video-vga.c
- [+] arch/x86/boot/video-vesa.c
- [M] arch/x86/boot/video.h
- [M] arch/x86/boot/video.c
- [M] arch/x86/boot/main.c			[D] video code modifications
- [M] arch/x86/boot/header.S			[D] heap_end_ptr + CAN_USE_HEAP


Sat Jan 23 21:39:06 CST 2016
- [M] arch/x86/boot/video.c			[D] some updates about video.
- [M] include/sandix/screen_info.h		[D] NOTE: need to modify vgacon.c


Mon Jan 25 14:03:30 CST 2016
- [-] arch/x86/kernel/entry.S
- [+] arch/x86/entry/
- [+] include/sandix/bootmem.h			[D] extern max_pfn ect. variables
- [+] include/asm-generic/page.h
- [+] arch/x86/include/asm/page_32.h		[D] separate 32/64 page definitions
- [+] arch/x86/include/asm/page_64.h
- [M] arch/x86/include/asm/page.h
- [+] arch/x86/include/asm/pgtable_32.h		[D] separate 32/64 page table definitions
- [+] arch/x86/include/asm/pgtable_64.h
- [+] arch/x86/include/asm/pgtable-2level.h
- [+] arch/x86/include/asm/pgtable-3level.h
- [+] arch/x86/include/asm/pgtable-2level-types.h
- [+] arch/x86/include/asm/pgtable-3level-types.h
- [M] arch/x86/include/asm/pgtable.h
- [M] arch/x86/Kconfig				[D] add CONFIG_HIGHMEM etc.


Tue Jan 26 10:15:37 CST 2016
- [+] arch/x86/include/asm/pgtable_32_types.h
- [+] arch/x86/include/asm/pgtable_64_types.h
- [+] arch/x86/include/asm/pgtable_types.h	[D] separate types from operations